Bug 310862 - Ampache only shows artist names, no tracks
Summary: Ampache only shows artist names, no tracks
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Ampache (other bugs)
Version First Reported In: 2.6-git
Platform: unspecified Linux
: NOR critical
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2012-11-29 09:44 UTC by Myriam Schweingruber
Modified: 2012-12-17 00:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myriam Schweingruber 2012-11-29 09:44:50 UTC
Currently it is not possible to use Ampache in latest git as the browser only shows the artist names, but no tracks. Those tracks do exist on the server and the web interface to Ampache works flawlessly.
Comment 1 Matěj Laitl 2012-12-14 14:04:08 UTC
Is there a public server I can test against or some other steps to reproduce not involving installing Ampache server?
Comment 2 Matěj Laitl 2012-12-17 00:15:44 UTC
Git commit b6b4961f0d6c089486b0f7554f44489ea5c0030d by Matěj Laitl.
Committed on 17/12/2012 at 01:12.
Pushed by laitl into branch 'master'.

Fix Ampache QueryMaker not working since commit 05b08e333086c064a6

BUGFIXES:
 * Fix Ampache albums & track not being shown, a recent regression.
FIXED-IN: 2.7

M  +1    -0    ChangeLog
M  +11   -4    src/services/ampache/AmpacheMeta.cpp
M  +3    -1    src/services/ampache/AmpacheServiceQueryMaker.cpp
M  +2    -2    src/services/ampache/AmpacheServiceQueryMaker.h

http://commits.kde.org/amarok/b6b4961f0d6c089486b0f7554f44489ea5c0030d