Fix Ampache QueryMaker not working since commit 05b08e333086c064a6

BUGFIXES:
 * Fix Ampache albums & track not being shown, a recent regression.

BUG: 310862
FIXED-IN: 2.7